--- a/src/Components/Button.css
+++ b/src/Components/Button.css
@@ -1,8 +1,8 @@
 button {
-    border: none;
-    border: 1px solid #D5D5D5;
-    font-size: 1.5em;
-    cursor: pointer;
-    color: #000;
-    text-align: center;
+  border: none;
+  border: 1px solid #d5d5d5;
+  font-size: 1.5em;
+  cursor: pointer;
+  color: #000;
+  text-align: center;
 }
