--- a/src/Components/Display.css
+++ b/src/Components/Display.css
@@ -1,16 +1,16 @@
 .display {
-    background: grey;
-    height: 100px;
-    line-height: 100px;
-    color: #FFF;
-    font-weight: bold;
-    text-align: right;
-    padding: 0 10px;
-    font-size: 2em;
-    white-space: nowrap;
-    overflow-x: auto;
-    overflow-y: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+  background: grey;
+  height: 100px;
+  line-height: 100px;
+  color: #fff;
+  font-weight: bold;
+  text-align: right;
+  padding: 0 10px;
+  font-size: 2em;
+  white-space: nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
